--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "prebuild": "npm install",
     "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "CI=false GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
