--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -16,7 +16,7 @@ node_modules/
 .env.development.local
 .env.test.local
 .env.production.local
-../backend/.env
+backend/.env
 
 # Logs
 npm-debug.log*
