--- a/backend/package.json
+++ b/backend/package.json
@@ -3,24 +3,31 @@
   "version": "1.0.0",
   "description": "Backend for AI Symptom Checker",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
     "@huggingface/inference": "^3.7.0",
+    "@types/multer": "^1.4.12",
+    "@xenova/transformers": "^2.17.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
-    "openai": "^4.20.1"
+    "multer": "^1.4.5-lts.2",
+    "openai": "^4.95.0",
+    "pdfjs-dist": "^2.16.105"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.8.9",
+    "@types/pdf-parse": "^1.1.5",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
